# simplr

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: broken.cpp
simplr/: cache.py  config.py  db.py  main.py  parser.py  prompt.py  providers.py  stats.py
tests/: test_cache.py  test_parser.py  test_stats.py
